--- a/sample/NHibernate.Caches.Redis.Sample/packages.config
+++ b/sample/NHibernate.Caches.Redis.Sample/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net40" />
   <package id="StackExchange.Redis" version="1.0.481" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.82.0" targetFramework="net40" />
